--- a/_config.yml
+++ b/_config.yml
@@ -42,7 +42,7 @@ social:
   - title: stack-overflow
     url: http://stackoverflow.com/questions/tagged/html-formfu
   - title: github
-    url: http://github.com/FormFu
+    url: https://github.com/FormFu
 
 # Postal address (add as many lines as necessary)
 address:
