--- a/_config.yml
+++ b/_config.yml
@@ -52,7 +52,7 @@ address:
   - line: Beverly Hills, CA 90210
 
 # Credits content
-credits: 'FormFu is an Open Source Bootstrap form processing library for the Perl language'
+credits: 'HTML::FormFu is a HTML form framework which aims to be as easy as possible to use for basic web forms, but with the power and flexibility to do anything else you might want to do (as long as it involves forms).'
 
 # Build settings
 markdown: kramdown
