--- a/_config.yml
+++ b/_config.yml
@@ -33,9 +33,9 @@ color:
 # Footer settings
 footer:
   copyright: FormFu Team
-  location: Location
+  lhs: Code Status
   social: Around the Web
-  credits: Credits
+  rhs: About FormFu
 
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
@@ -46,8 +46,8 @@ social:
   - title: envelope
     url: https://lists.perl.org/list/html-formfu.html
 
-# Credits content
-credits: 'HTML::FormFu is a HTML form framework which aims to be as easy as possible to use for basic web forms, but with the power and flexibility to do anything else you might want to do (as long as it involves forms).'
+# About content
+about: 'HTML::FormFu is a HTML form framework which aims to be as easy as possible to use for basic web forms, but with the power and flexibility to do anything else you might want to do (as long as it involves forms).'
 
 # Build settings
 markdown: kramdown
